menu alignment fixed

--- a/Mockup/home.css
+++ b/Mockup/home.css
@@ -65,32 +65,34 @@ table {
     width: 100%;
     left: 0%;
     top: 0%;
-    height: 45px;
+    height: 50px;
     z-index: 5;
+    //background: rgb(168, 106, 43);
+    background: #b16c40;
+    padding: 0 18%;
+    box-sizing: border-box;
+    color: white;
     box-shadow: 0px 2px 15px rgba(0,0,0, 0.3);
 }
 
-.bar {
-    display: inline-block;
-    width: 100%;
-    background: rgb(168, 106, 43);
-    //background: rgb(149, 108, 88);;
-    height: 100%;
-}
+
 
 .menu img {
     height: 100%;
 }
 
 #reel {
-    position: absolute;
+    position: fixed;
     display: inline-block;
     width: 100%;
-    height: 100%;
+    height: 50px;
+    top:0;
+    left:0;
     background: url(images/reel-pattern.png);
     background-size: contain;
     opacity: 0.8;
     mix-blend-mode: overlay;
+    z-index: 900;
 }
 
 #screen {
@@ -319,8 +321,9 @@ table {
     font-size: 1.2em;
     letter-spacing: 2;
     color: white;
+    height: 45px;
 }
-.links span {
+.links-menu span {
     color:rgb(64,22,18);
 }
 .links a {
@@ -331,27 +334,27 @@ table {
 }
 
 .links {
-    position: absolute;
     bottom: 0;
     display: inline-block;
     top: 13px;
 }
 
 #left-nav-links {
-    left: 20%;
+    //left: 20%;
+    display: inline-block;
 }
 
 #right-nav-links {
-    right: 20%;
+    //right: 20%;
 }
 
 #nav-logo {
-    position: absolute;
-    width: 9.5em;
-    height: 5em;
-    margin-top: -28px;
-    margin-left: 44.5%;
+    height: 50px;
+    width:17%;
+    background: url(images/nav-logo.png) center center no-repeat;
+    background-size:contain;
     display: inline-block;
+    vertical-align: bottom;
 }
 
 #fest-date {
@@ -531,9 +534,57 @@ table {
 .benny-2k13 {
     position: fixed;
     top:30%;
-    left: 30%;
-    height: 30%;
+    left: 25%;
+    height: 25%;
     width:30%;
     background: url(images/BENNY%20DYAL.png) center center no-repeat;
     background-size: contain;
 }
+
+
+
+.alfaaz-2k13 {
+    position: fixed;
+    top:30%;
+    left: 50%;
+    height: 25%;
+    width:30%;
+    background: url(images/ALFAAZ.png) center center no-repeat;
+    background-size: contain;
+}
+
+
+.crowd-2k13 {
+    position: fixed;
+    top:30%;
+    left: 75%;
+    height: 25%;
+    width:30%;
+    background: url(images/crowd.png) center center no-repeat;
+    background-size: contain;
+
+}
+
+.links-menu {
+    display: inline-block;
+    height: 50px;
+    width: 12.5%;
+    box-sizing: border-box;
+    line-height: 50px;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    font-size: 18px;
+    letter-spacing: 2px;
+    font-family: bignoodletitling;   
+    cursor: pointer;
+}
+.menu span{
+    line-height: 50px;
+    font-size: 18px;
+    font-family: bignoodletitling;   
+}
+
+
+
+
